--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/app.js",
   },
   "dependencies": {
     "http-proxy": "latest",
