--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "build": "npm run build",
+    "build": "npm run build"
   },
   "dependencies": {
     "http-proxy": "latest",
