--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "build": "tsc"
+    "build": "npm -i && npm run build"
     
   },
   "dependencies": {
